# utiles

./: .gitignore  CMakeLists.txt  cmd_here.bat  licence.md  open_project.bat  readme.md  run.bat
app-core/: CMakeLists.txt  definition.h  lang.cpp  lang.hpp  logger.hpp  utiles.cpp  utiles.cppm  utiles.hpp
app-core/tests/: main_test.cpp
res/: generate_ico.bat  res.rc
